// Copyright 2023 Fredrick Allan Grott. All rights reserved.
// Use of this source code is governed by a BSD-style
// license that can be found in the LICENSE file.

class AppPaths {
  
  static const String booksScreenRoutePath = "/books";
  
  static const String homeScreenRoutePath = "/";
  
  static const String infoScreenRoutePath = "/info";
  
  static const String showcaseScreenRoutePath = "/showcase";
  
  static const String uikitsScreenRoutePath = "/uikits";
}
