@startuml
set namespaceSeparator ::

class "grott_folio::src::application::catcher::custom_catcher_logger.dart::CustomCatcherLogger" {
  +void info()
  +void fine()
  +void warning()
  +void severe()
}

"catcher::utils::catcher_logger.dart::CatcherLogger" <|-- "grott_folio::src::application::catcher::custom_catcher_logger.dart::CustomCatcherLogger"

class "grott_folio::src::application::routes::app_paths.dart::AppPaths" {
  {static} +String booksScreenRoutePath
  {static} +String homeScreenRoutePath
  {static} +String infoScreenRoutePath
  {static} +String showcaseScreenRoutePath
  {static} +String uikitsScreenRoutePath
}

class "grott_folio::src::application::routes::go_router_observer.dart::GoRouterObserver" {
  +void didPush()
  +void didPop()
  +void didRemove()
  +void didReplace()
}

"flutter::src::widgets::navigator.dart::NavigatorObserver" <|-- "grott_folio::src::application::routes::go_router_observer.dart::GoRouterObserver"

class "grott_folio::src::domain::models::nav_item_data.dart::NavItemData" {
  +String name
  +String route
  +List<Object?> props
}

"equatable::src::equatable.dart::Equatable" <|-- "grott_folio::src::domain::models::nav_item_data.dart::NavItemData"

class "grott_folio::src::presentation::features::books_screen::books_screen.dart::BooksScreen" {
  +Widget build()
}

"flutter::src::widgets::framework.dart::StatelessWidget" <|-- "grott_folio::src::presentation::features::books_screen::books_screen.dart::BooksScreen"

class "grott_folio::src::presentation::features::home_screen::home_screen.dart::HomeScreen" {
  +Widget build()
}

"flutter::src::widgets::framework.dart::StatelessWidget" <|-- "grott_folio::src::presentation::features::home_screen::home_screen.dart::HomeScreen"

class "grott_folio::src::presentation::features::info_screen::info_screen.dart::InfoScreen" {
  +Widget build()
}

"flutter::src::widgets::framework.dart::StatelessWidget" <|-- "grott_folio::src::presentation::features::info_screen::info_screen.dart::InfoScreen"

class "grott_folio::src::presentation::features::showcase_screen::showcase_screen.dart::ShowcaseScreen" {
  +Widget build()
}

"flutter::src::widgets::framework.dart::StatelessWidget" <|-- "grott_folio::src::presentation::features::showcase_screen::showcase_screen.dart::ShowcaseScreen"

class "grott_folio::src::presentation::features::uikits_screen::uikits_screen.dart::UIKitsScreen" {
  +Widget build()
}

"flutter::src::widgets::framework.dart::StatelessWidget" <|-- "grott_folio::src::presentation::features::uikits_screen::uikits_screen.dart::UIKitsScreen"

class "grott_folio::src::presentation::widgets::app_platform_wrapper.dart::AppPlatformWrapper" {
  +Widget build()
}

"flutter::src::widgets::framework.dart::StatelessWidget" <|-- "grott_folio::src::presentation::widgets::app_platform_wrapper.dart::AppPlatformWrapper"

class "grott_folio::src::presentation::widgets::app_shared_scaffold.dart::AppSharedScaffold" {
  +Widget appScreen
  +State<AppSharedScaffold> createState()
}

"grott_folio::src::presentation::widgets::app_shared_scaffold.dart::AppSharedScaffold" o-- "flutter::src::widgets::framework.dart::Widget"
"flutter::src::widgets::framework.dart::StatefulWidget" <|-- "grott_folio::src::presentation::widgets::app_shared_scaffold.dart::AppSharedScaffold"

class "grott_folio::src::presentation::widgets::app_shared_scaffold.dart::_AppSharedScaffoldState" {
  +bool isRTL()
  +void onIndexSelect()
  +Widget build()
  +void initState()
}

"flutter::src::widgets::framework.dart::State" <|-- "grott_folio::src::presentation::widgets::app_shared_scaffold.dart::_AppSharedScaffoldState"

class "grott_folio::src::presentation::widgets::app_shared_scaffold.dart::NavigationArguments" {
  +bool showUnVeilPageAnimation
  +bool reverseAnimationOnPop
}

class "grott_folio::src::presentation::widgets::nav_bar.dart::NavBar" {
  +State<NavBar> createState()
}

"flutter::src::widgets::framework.dart::StatefulWidget" <|-- "grott_folio::src::presentation::widgets::nav_bar.dart::NavBar"

class "grott_folio::src::presentation::widgets::nav_bar.dart::_NavBarState" {
  +Widget build()
}

"flutter::src::widgets::framework.dart::State" <|-- "grott_folio::src::presentation::widgets::nav_bar.dart::_NavBarState"


@enduml